// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`last_line.coffee 1`] = `
<SomeHighlyConfiguredComponent
  onEnter={this.onEnter}
  onLeave={this.onLeave}
  onChange={this.onChange}
  initialValue={this.state.initialValue}
  ignoreStuff={true}
>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<SomeHighlyConfiguredComponent
  onEnter={@onEnter}
  onLeave={@onLeave}
  onChange={@onChange}
  initialValue={@state.initialValue}
  ignoreStuff={true}>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>

`;

exports[`last_line.coffee 2`] = `
<SomeHighlyConfiguredComponent
  onEnter={this.onEnter}
  onLeave={this.onLeave}
  onChange={this.onChange}
  initialValue={this.state.initialValue}
  ignoreStuff={true}
>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<SomeHighlyConfiguredComponent
  onEnter={@onEnter}
  onLeave={@onLeave}
  onChange={@onChange}
  initialValue={@state.initialValue}
  ignoreStuff={true}
>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>

`;
